Heaader bug fix - button mobile, js module, nav style

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -6,7 +6,4 @@
   &__logo {
     align-self: center;
   }
-  .nav {
-    margin-left: auto;
-  }
 }
